--- a/.github/workflows/step-7.yml
+++ b/.github/workflows/step-7.yml
@@ -32,10 +32,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-            # username: ${{ github.actor }}
-            # password: ${{ secrets.DOCKER_TOKEN }}
-          username: adiouma-dione
-          password: C.Q.Ri.T123
+            username: ${{ github.actor }}
+            password: ${{ secrets.DOCKER_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
