--- a/.github/workflows/step-7.yml
+++ b/.github/workflows/step-7.yml
@@ -1,27 +1,33 @@
 name: Pipeline-step-7
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # Adjust the branch as needed
+
 env:
   APPLICATION_NAME: flaskapp
   REGISTRY: ghcr.io
   IMAGE_NAME: adiouma-dione/devops-labs-flask-app
+
 jobs:
   lint:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Python environment
-      uses: actions/setup-python@v4
-      with:
+      - uses: actions/checkout@v3
+      - name: Setup Python environment
+        uses: actions/setup-python@v4
+        with:
           python-version: "3.10"
-    - name: Install requirements
-      run: pip install --quiet --requirement requirements.txt
-    - name: Lint code
-      run: |
-        flake8 --ignore=E501,E231 *.py
-        pylint --disable=C0301 --disable=C0326 test_app.py
-    - name: Run unit tests
-      run: python -m unittest --verbose --failfast 
+      - name: Install requirements
+        run: pip install --quiet --requirement requirements.txt
+      - name: Lint code
+        run: |
+          flake8 --ignore=E501,E231 *.py
+          pylint --disable=C0301 --disable=C0326 test_app.py
+      - name: Run unit tests
+        run: python -m unittest --verbose --failfast
+
   docker:
     name: Publish Docker Image
     runs-on: ubuntu-latest
@@ -33,23 +39,5 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=match,pattern=(.*)
-            type=ref,event=tag
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }} 
+          password: ${{ secrets.DOCKER_TOKEN }}  # Use GitHub token as the password
+
