--- a/.github/workflows/step-7.yml
+++ b/.github/workflows/step-7.yml
@@ -3,8 +3,7 @@ name: PipelineTest
 on:
   push:
     branches:
-      - main  # Adjust the branch as needed
-
+      - main 
 env:
   APPLICATION_NAME: flaskapp
   REGISTRY: ghcr.io
@@ -39,5 +38,26 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}  # Use GitHub token as the password
+          password: ${{ secrets.DOCKER_TOKEN }}
+          ########
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=match,pattern=(.*)
+            type=ref,event=tag
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+
 
